apply plugin: 'java'
apply plugin: 'maven'
apply plugin: 'maven-publish'

def jungleTreeNexusUsername = hasProperty('jungleTreeNexusUsername') ? jungleTreeNexusUsername : System.getenv('jungleTreeNexusUsername')
def jungleTreeNexusPassword = hasProperty('jungleTreeNexusPassword') ? jungleTreeNexusPassword : System.getenv('jungleTreeNexusPassword')

allprojects {
    apply plugin: 'java'
    apply plugin: 'maven'
    apply plugin: 'maven-publish'

    group 'org.jungletree'
    version '0.0.1-SNAPSHOT'

    sourceCompatibility = 9
    targetCompatibility = 9

    repositories {
        jcenter()
        maven {
            name 'jungletree-snapshots'
            url 'https://repo.jungletree.org/repository/jungletree-snapshots/'
        }
    }

    configurations.all {
        resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
    }
}

subprojects {
    afterEvaluate {
        compileJava {
            inputs.property("moduleName", moduleName)
            doFirst {
                options.compilerArgs = [
                        '--module-path', classpath.asPath,
                ]
                classpath = files()
            }
        }

        compileTestJava {
            inputs.property("moduleName", moduleName)
            doFirst {
                options.compilerArgs = [
                        '--module-path', classpath.asPath,
                        '--add-modules', 'junit',
                        '--add-reads', "$moduleName=junit",
                        '--patch-module', "$moduleName=" + files(sourceSets.test.java.srcDirs).asPath,
                ]
                classpath = files()
            }
        }

        test {
            inputs.property("moduleName", moduleName)
            doFirst {
                jvmArgs = [
                        '--module-path', classpath.asPath,
                        '--add-modules', 'ALL-MODULE-PATH',
                        '--add-reads', "$moduleName=junit",
                        '--patch-module', "$moduleName=" + files(sourceSets.test.java.outputDir).asPath,
                ]
                classpath = files()
            }
        }

        publishing {
            repositories {
                maven {
                    credentials {
                        username jungleTreeNexusUsername
                        password jungleTreeNexusPassword
                    }
                    if (version.endsWith('-SNAPSHOT')) {
                        url "https://repo.jungletree.org/repository/jungletree-snapshots"
                    } else {
                        url "https://repo.jungletree.org/repository/jungletree-releases"
                    }
                }
            }
            publications {
                mavenJava(MavenPublication) {
                    groupId group
                    artifactId "${moduleName.substring("rainforest.".length())}"
                    version version

                    from components.java
                }
            }
        }
    }
}
